0x01-variables_if_else_while/1-last_digit.c:
st_digit.c:20:10: error: too many arguments for format [-Werror=format-extra-args]
   20 |   printf("Last digit of %d and is less than 6 and not 0\n", n, n % 10);
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1-last_digit.c:25:11: error: too many arguments for format [-Werror=format-extra-args]
   25 |    printf("Lats digit of %d and is greater than 5\n", n, n % 10);
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errorsi
